Updates css create addressList class to avoid overflow when too many wallet addresses on stakes page

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -444,6 +444,21 @@ div.sidebar svg {
   font-weight: normal;
 }
 
+.addressList {
+  overflow-y: auto;
+  height: calc(100vh - 80px);
+}
+
+.addressList .colEdit {
+  padding-left: 20px;
+}
+
+.addressList th {
+  color: #ccc;
+  font-size: 1.1em;
+  font-weight: normal;
+}
+
 .sendTXInfo {
   height: 30px;
 }
